--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Froce Xcode
+      run: sudo xcode-select -switch /Applications/Xcode_13.2.1.app
     - name: Build
       run: swift xcodebuild -v
     - name: Run tests
