--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,8 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Froce Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_13.2.1.app
+    - name: Force Xcode
+      run: sudo xcode-select -switch /Applications/Xcode_14.0.1.app
     - name: Build
       run: swift build -v
     - name: Run tests
