--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Force Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_14.0.1.app
+      run: sudo xcode-select -switch /Applications/Xcode.app
     - name: Build
       run: swift build -v
     - name: Run tests
